feat: added Bank
